@@ -1,5 +1,11 @@
-$Id: Changelog.txt,v 1.153 2011/09/12 09:52:01 nanard Exp $
+$Id: Changelog.txt,v 1.157 2012/01/07 10:13:24 nanard Exp $
 miniUPnP client Changelog.
+
+2012/01/07:
+  The multicast interface can now be specified by name with IPv4.
+
+2012/01/02:
+  Install man page
 
 2011/11/25:
   added header to Port Mappings list in upnpc.c
